--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,16 +3,18 @@
     padding: 0;
     font-family: 'Poppins', sans-serif;
 }
-
+body {
+    background: linear-gradient(to bottom right, black, #400000);
+    height: 100vh;
+}
 p {
     color: rgb(200, 17, 17);
 }
 /* search bar styling */
 .container{
     width: 100%;
-    height: 100vh;
+
     display: flex;
-    background: #460303;
     align-items: center;
     justify-content: center;
 }
@@ -55,4 +57,18 @@ form .fa-search{
     display: flex;
     justify-content: center;
     margin: 0;
+}
+.logo {
+
+    justify-content: center;
+}
+
+.movie-card {
+    font-size: medium;
+}
+
+#movie-title {
+    color: white;
+    font-size: medium;
+    font-weight: bold;
 }
