--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,13 +3,13 @@
     padding: 0;
     font-family: 'Poppins', sans-serif;
 }
+
 body {
     background: linear-gradient(to bottom right, black, #400000);
     height: 100vh;
+    display: flexbox;
 }
-p {
-    color: rgb(200, 17, 17);
-}
+
 /* search bar styling */
 .container{
     width: 100%;
@@ -59,34 +59,46 @@ form .fa-search{
     display: flex;
     justify-content: center;
     margin: 0;
+
 }
 .service-btn button{
     border-radius: 50%;
-    background-color: rgba(0, 0, 0, 0);
+    background-color: transparent;
     outline: none;
     border: 0px;
 }
 .service-btn image {
     
 }
-.logo {
 
+header {
+    display: block;
+}
+.logo {
     justify-content: center;
+    width: fit-content;
 }
 
 
 .movie-card {
     font-size: medium;
     background-color: rgba(0,0,0,.6);
-    max-width: 100%;
-    max-height: 20vh;
+    color: white;
+    max-height: 40vh;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
+
 }
 
+#movie-poster img {
+    width: 100px;
+    float: left;
+    margin: 0px 10px;
+}
 #movie-title {
     color: white;
     font-size: medium;
     font-weight: bold;
+    width: 1000px
 }
