--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
+    color: white;
 }
 
 body {
@@ -9,7 +10,11 @@ body {
     height: 100vh;
     display: flexbox;
 }
-
+header {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 /* search bar styling */
 .container{
     width: 100%;
@@ -30,6 +35,7 @@ form input{
     flex: 1;
     border: none;
     outline: none;
+    color: black;
 }
 
 form button{
@@ -66,17 +72,19 @@ form .fa-search{
     background-color: transparent;
     outline: none;
     border: 0px;
+    width: 50px
 }
-.service-btn image {
-    
+.service-btn img {
+    width: 50px;
 }
 
-header {
-    display: block;
-}
-.logo {
-    justify-content: center;
-    width: fit-content;
+
+.logo img {
+    flex-basis: 400px;
+    flex-grow: 0;
+    flex-shrink: 1;
+
+
 }
 
 
@@ -85,11 +93,11 @@ header {
     background-color: rgba(0,0,0,.6);
     color: white;
     max-height: 40vh;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-
+    flex-basis: 1400px;
+    flex-grow: 0;
+    margin: 40px;
 }
+
 
 #movie-poster img {
     width: 100px;
@@ -100,5 +108,16 @@ header {
     color: white;
     font-size: medium;
     font-weight: bold;
-    width: 1000px
+    /* width: 1000px */
+}
+
+.flex-container {
+    display: flex;
+  flex-wrap: wrap;
+  font-size: 30px;
+  justify-content: center;
+  
+}
+.flex-container p {
+    background-color: rgba(0,0,0,.6);
 }
