--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,6 +118,6 @@ form .fa-search{
   justify-content: center;
   
 }
-.flex-container p {
+#streaming-tag {
     background-color: rgba(0,0,0,.6);
 }
