--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,8 @@
 body {
     background: linear-gradient(to bottom right, black, #400000);
     background-repeat: no-repeat;
-    height: 100%;
+    background-size: 100% 100%;
+    /* height: 100%; */
     display: flexbox;
 }
 
